<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Nest" Id="{ed610896-c9d6-42c9-a94a-a58f7ec22d79}">
    <Declaration><![CDATA[TYPE ST_Nest :
	STRUCT
		railSerial				: STRING;
		controllerSerial		: STRING;
		batterySerial			: STRING;
		nestID					: USINT;
		conveyorPosition		: USINT;
		okToProcess				: BOOL				:= FALSE;
		failureMode				: STRING			:= 'N/A';
		endcapAssembled			: BOOL 				:= FALSE;
		controllerAssembled		: BOOL				:= FALSE;	
	END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>