<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="Constants" Id="{93dfd102-023b-42e1-97d9-bf01ba954425}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	
	Total_Nest						: USINT		:= 155;
	
	LoadPos							: USINT		:= 1;
	NestScanPos						: USINT		:= 2;
	EndcapAsmPos					: USINT		:= 3;
	ControllerScanPos				: USINT		:= 4;	
	BatteryConnectPos		 		: USINT		:= 5;
	ControllerAsmPos				: USINT		:= 6;
	DisplayScanPos		 			: USINT		:= 18;	
	BatteryDisconnectPos			: USINT		:= 20;
	TappingPos						: USINT		:= 23;
	
//	St01_LoadPos					: USINT		:= 1; // From quiles branch 
//	St01_EndcapAsmPos				: USINT		:= 3;
//	St01_ControllerAsmPos				: USINT		:= 4;
//	St01_BatteryAsmPos				: USINT		:= 5;
//	St01_UnloadPos					: USINT		:= 9;
						
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>